--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="col-sm-6">
 					<img src="images/profile.jpg" class="profile">
 					<h1 class="name">TRẦN NGỌC <br/>BẢO HÂN</h1>
-					<p class="name_p">Data analysis</p>
+					<p class="name_p">Data Scientist</p>
 				</div>
 				<div class="col-sm-6">
 					<div style="float: right;">
@@ -47,7 +47,7 @@
 				<h1 class="head">Profile</h1>
 				<p class="para-2">
 					I am a third-year university student and i am excited to apply for the data analyst position. 
-					I am particularly interested in the field of data analysis because it allows me to use my analytical and problem-solving skills in a meaningful way. 
+					I am particularly interested in the field of data scientist because it allows me to use my analytical and problem-solving skills in a meaningful way. 
 					I am confident that i would excel in this position and contribute to the success of the team.
 				</p>
 			</div>
