--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 				<h1 class="head">Profile</h1>
 				<p class="para-2">
-					I am a third-year university student and i am excited to apply for the data analyst position. 
+					I am a third-year university student and i am excited to apply for the Data Scientist position. 
 					I am particularly interested in the field of data scientist because it allows me to use my analytical and problem-solving skills in a meaningful way. 
 					I am confident that i would excel in this position and contribute to the success of the team.
 				</p>
